# arabic-rag-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
arabic_rag_kit/: __init__.py  chunk.py  cli.py  loaders.py  normalize.py  search.py
tests/: test_chunk.py  test_cli.py  test_normalize.py  test_search.py
